Fixing paths to assets

--- a/templates/includes/topnav.hbs
+++ b/templates/includes/topnav.hbs
@@ -6,7 +6,7 @@ component: topnav
         <ul class="title-area">
             <li class="name">
                 <h1>
-                    <a href="#"><img src="/assets/mmt-logo.svg" width="32" height="32"/></a>
+                    <a href="./"><img src="assets/mmt-logo.svg" width="32" height="32"/></a>
                 </h1>
             </li>
             <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
