--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>JS Style Guide - MMT Digital</title>
-    <link rel="stylesheet" href="../../css/app.css"/>
-    <script src="../../bower_components/modernizr/modernizr.js"></script>
+    <link rel="stylesheet" href="css/app.css"/>
+    <script src="bower_components/modernizr/modernizr.js"></script>
 </head>
 <body>
 {{> topnav }}
@@ -22,8 +22,8 @@
         {{/markdown}}
     </div>
 </div>
-<script src="../../bower_components/jquery/jquery.min.js"></script>
-<script src="../../bower_components/foundation/js/foundation.min.js"></script>
-<script src="../../js/app.js"></script>
+<script src="bower_components/jquery/jquery.min.js"></script>
+<script src="bower_components/foundation/js/foundation.min.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
