--- a/templates/includes/topnav.hbs
+++ b/templates/includes/topnav.hbs
@@ -1,7 +1,7 @@
 ---
 component: topnav
 ---
-<div class="fixed">
+<div class="contain-to-grid fixed">
     <nav class="top-bar" data-topbar>
         <ul class="title-area">
             <li class="name">
