--- a/templates/index.html
+++ b/templates/index.html
@@ -9,24 +9,31 @@
     <script src="bower_components/modernizr/modernizr.js"></script>
     <script src="highlight/highlight.pack.js"></script>
 </head>
-<body>
-{{> topnav }}
-<div class="row">
-    {{#title}}
-    <div class="large-12 columns">
-        <h1>{{ title }}</h1>
-        <hr/>
-    </div>
-    {{/title}}
-    <div class="large-12 columns">
-        {{#markdown}}
-        {{> body }}
-        {{/markdown}}
+<body class="antialiased hide-extras">
+<div class="marketing off-canvas-wrap">
+    <div class="inner-wrap">
+        {{> topnav }}
+        <section role="main">
+            <div class="row">
+                {{#title}}
+                <div class="large-12 columns">
+                    <h1>{{ title }}</h1>
+                    <hr/>
+                </div>
+                {{/title}}
+                <div class="large-12 columns">
+                    {{#markdown}}
+                    {{> body }}
+                    {{/markdown}}
+                </div>
+            </div>
+        </section>
+        <script src="bower_components/jquery/jquery.min.js"></script>
+        <script src="bower_components/foundation/js/foundation.min.js"></script>
+        <script src="bower_components/foundation/js/foundation/foundation.magellan.js"></script>
+        <script>hljs.initHighlightingOnLoad();</script>
+        <script src="js/app.js"></script>
     </div>
 </div>
-<script src="bower_components/jquery/jquery.min.js"></script>
-<script src="bower_components/foundation/js/foundation.min.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>
-<script src="js/app.js"></script>
 </body>
 </html>
