--- a/templates/includes/topnav.hbs
+++ b/templates/includes/topnav.hbs
@@ -6,7 +6,7 @@ component: topnav
         <ul class="title-area">
             <li class="name">
                 <h1>
-                    <a href="./"><img src="assets/mmt-logo.svg" width="32" height="32"/></a>
+                    <a href="./"><img src="assets/mmt-logo.svg" width="32" height="32" style="margin-right:1em"/> JavaScript Style Guide</a>
                 </h1>
             </li>
             <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
@@ -16,7 +16,7 @@ component: topnav
             <!-- Right Nav Section -->
             <ul class="left">
                 <li class="has-dropdown">
-                    <a href="#">JavaScript Style Guide</a>
+                    <a href="./">Overview</a>
                     <ul class="dropdown">
                         <li><a href="summary.html">The short version</a></li>
                         <li><a href="formatting.html">Source code formatting</a></li>
