Update primary colour to red

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -52,7 +52,7 @@ $mmt-red: #ee2e24;
 // $default-float: left;
 
 // We use these as default colors throughout
-// $primary-color: #008CBA;
+$primary-color: $mmt-red;
 // $secondary-color: #e7e7e7;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
