--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -53,7 +53,7 @@ $mmt-red: #ee2e24;
 
 // We use these as default colors throughout
 $primary-color: $mmt-red;
-// $secondary-color: #e7e7e7;
+$secondary-color: #e7e7e7;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
 // $warning-color: #f08a24;
