Add highlightjs styles to the compiled CSS

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,5 +1,6 @@
 @import "settings";
 @import "foundation";
+@import "monokai_sublime";
 
 body {
   display: flex;
@@ -8,6 +9,7 @@ body {
 
   main {
     flex: 1;
+    padding-top: 1em;
   }
 }
 
