--- a/templates/includes/footer.hbs
+++ b/templates/includes/footer.hbs
@@ -6,5 +6,7 @@ component: footer
 
     <p>This website is hosted on GitHub, so it's really easy to get involved.</p>
 
+    <p>Fork this project or create a Pull request and we can bring your suggestions into the fold.</p>
+
     <p><a href="https://github.com/psyked/js-style-guide" class="button">View this project on GitHub.</a></p>
 </div>
