--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -5,8 +5,6 @@
 // Uncomment to use rem-calc() in your settings
 // @import "foundation/functions";
 
-$mmt-red: #ee2e24;
-
 // $experimental: true;
 
 // The default font-size is set to 100% of the browser style sheet (usually 16px)
@@ -52,7 +50,7 @@ $mmt-red: #ee2e24;
 // $default-float: left;
 
 // We use these as default colors throughout
-$primary-color: $mmt-red;
+$primary-color: #27ae60;
 $secondary-color: #e7e7e7;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
@@ -932,11 +930,11 @@ $secondary-color: #e7e7e7;
 // $include-html-top-bar-classes: $include-html-classes;
 
 // Background color for the top bar
-$topbar-bg-color: $mmt-red; //#333;
+$topbar-bg-color: $primary-color; //#333;
 // $topbar-bg: $topbar-bg-color;
 
 // Height and margin
-$topbar-height: 45px;
+// $topbar-height: 45px;
 // $topbar-margin-bottom: 0;
 
 // Control Input height for top bar
@@ -946,9 +944,9 @@ $topbar-height: 45px;
 // $topbar-title-font-size: rem-calc(17);
 
 // Style the top bar dropdown elements
-$topbar-dropdown-bg: $mmt-red;
+$topbar-dropdown-bg: $primary-color;
 // $topbar-dropdown-link-color: #fff;
-$topbar-dropdown-link-bg: darken($mmt-red, 5%);
+$topbar-dropdown-link-bg: darken($primary-color, 5%);
 // $topbar-dropdown-toggle-size: 5px;
 // $topbar-dropdown-toggle-color: #fff;
 // $topbar-dropdown-toggle-alpha: 0.4;
@@ -960,7 +958,7 @@ $topbar-dropdown-link-bg: darken($mmt-red, 5%);
 // $topbar-link-weight: normal;
 // $topbar-link-font-size: rem-calc(13);
 // $topbar-link-hover-lightness: -10%; // Darken by 10%
-$topbar-link-bg-hover: darken($mmt-red, 10%); //#272727  ;
+$topbar-link-bg-hover: darken($primary-color, 10%); //#272727  ;
 // $topbar-link-bg-active: $primary-color;
 // $topbar-link-bg-active-hover: darken($primary-color, 5%);
 // $topbar-link-font-family: $body-font-family;
