Updated OpenGraph page titles

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <meta property="og:image" content="{{ image }}"/>{{/if}}{{#if url}}
     <meta property="og:url" content="{{ url }}"/>{{/if}}{{#if description}}
     <meta property="og:description" content="{{ description }}"/>{{/if}}
-    <meta property="og:site_name" content="MMT Digital's SASS / CSS Style Guide"/>
+    <meta property="og:site_name" content="SASS / CSS Style Guide"/>
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="en_GB"/>
     <title>{{ title }}</title>
