--- a/templates/includes/footer.hbs
+++ b/templates/includes/footer.hbs
@@ -5,13 +5,13 @@ component: footer
     <h4>Want to contribute?</h4>
     <p>This website is hosted on GitHub, so it's really easy to get involved.</p>
     <p>Fork this project or create a Pull request and we can bring your suggestions into the fold.</p>
-    <p><a href="https://github.com/psyked/css-sass-style-guide" class="button">View this project on GitHub.</a></p>
+    <p><a href="https://github.com/mmtdigital/css-sass-style-guide" class="button">View this project on GitHub.</a></p>
 </div>
 <div class="large-8 columns">
 {{#markdown}}
 #### Have you seen our other projects?
-- [HTML Development Guidelines](http://psyked.github.io/html-style-guide/)
+- [HTML Development Guidelines](http://mmtdigital.github.io/html-style-guide/)
 - **SASS / CSS Development Guidelines**
-- [JavaScript Style Guide](http://psyked.github.io/js-style-guide/)
+- [JavaScript Style Guide](http://mmtdigital.github.io/js-style-guide/)
 {{/markdown}}
 </div>
